--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <button class="delete-btn btn red">
                 <i class="fa fa-remove"></i> Delete Meal
               </button>
-              <button class="back-btn btn grey pull-right">
+              <button type="button" class="back-btn btn grey pull-right">
                 <i class="fa fa-chevron-circle-left"></i> Back
               </button>
             </div>
